@@ -1,0 +1,39 @@
+from galpy.util import config
+_APY_LOADED= True
+try:
+    from astropy import units
+except ImportError:
+    _APY_LOADED= False
+class df(object):
+    """Top-level class for DF classes"""
+    def __init__(self,ro=None,vo=None):
+        """
+        NAME:
+           __init__
+        PURPOSE:
+           initialize a DF object
+        INPUT:
+           ro= (None) distance scale
+           vo= (None) velocity scale
+        OUTPUT:
+        HISTORY:
+           2016-02-28 - Written - Bovy (UofT)
+        """
+        # Parse ro and vo
+        if ro is None:
+            self._ro= config.__config__.getfloat('normalization','ro')
+            self._roSet= False
+        else:
+            if _APY_LOADED and isinstance(ro,units.Quantity):
+                ro= ro.to(units.kpc).value
+            self._ro= ro
+            self._roSet= True
+        if vo is None:
+            self._vo= config.__config__.getfloat('normalization','vo')
+            self._voSet= False
+        else:
+            if _APY_LOADED and isinstance(vo,units.Quantity):
+                vo= vo.to(units.km/units.s).value
+            self._vo= vo
+            self._voSet= True
+        return None
